force-app/main/default/objects/Relationship_Signal__c/Relationship_Signal__c.object-meta.xml
<CustomObject>
    <label>Relationship Signal</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Relationship Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>