force-app/main/default/objects/Relationship_Signal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationship Signals</relationshipLabel>
    <relationshipName>Relationship_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>