force-app/main/default/objects/Relationship_Signal__c/fields/External_Contact__c.field-meta.xml
<CustomField>
    <fullName>External_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationship Signals</relationshipLabel>
    <relationshipName>Relationship_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>