force-app/main/default/objects/Relationship_Signal__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Prior customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>