force-app/main/default/objects/Relationship_Signal__c/fields/Internal_Rep__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rep__c</fullName>
    <label>Internal Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>