force-app/main/default/objects/Relationship_Signal__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weak</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>