force-app/main/default/objects/Relationship_Signal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>External_Contact__c</columns>
    <columns>Context__c</columns>
    <columns>Strength__c</columns>
    <columns>Internal_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>